--- a/src/layout/components/Toolbar/Toolbar.module.css
+++ b/src/layout/components/Toolbar/Toolbar.module.css
@@ -25,4 +25,25 @@
     .DesktopOnly {
         display: none;
     }
+    .HamburgerIcon {
+        cursor: pointer;
+        width: 30px;
+        height: 100%;
+        margin-top: 25px;
+        display: block;
+    }
+    .HamburgerIcon div {
+        width: 100%;
+        background-color: white;
+        width: 100%;
+        height: 4px;
+        margin-bottom: 5px;
+    }
+}
+
+@media (min-width: 500px) {
+    .HamburgerIcon {
+        display: none;
+    }
+    
 }
