adding redux to project

--- a/src/components/Input/Input.module.css
+++ b/src/components/Input/Input.module.css
@@ -25,3 +25,8 @@
     outline: none;
     background-color: #ccc;
 }
+
+.Invalid {
+    border-color: red;
+    background-color: rgb(238, 151, 141);
+}
